<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 The Android Open Source Project
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_package_name"
            android:layout_weight="1"
            android:padding="24dp"/>
        <EditText
            android:id="@+id/da_package_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/da_package_name_sample"
            android:layout_weight="10"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_download_location"
            android:layout_weight="1"
            android:padding="24dp"/>
        <EditText
            android:id="@+id/da_download_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/da_download_location_sample"
            android:layout_weight="10"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/nfc_content_textview"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_guide"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/read_nfc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="24dp"
            android:text="@string/read_nfc_tag" />

        <Button
            android:id="@+id/write_nfc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_margin="24dp"
            android:text="@string/write_nfc_tag" />
    </LinearLayout>

</LinearLayout>